<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notifications_header">

        <SwitchPreference
            android:defaultValue="false"
            android:key="notification_vibrate_charging"
            android:title="Vibrate when charging" />
        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/miscellaneous_header">

        <SwitchPreferenceCompat
            app:key="enable_keep_alive"
            app:summary="@string/keep_alive_summary"
            app:title="@string/enable_keep_alive" />

    </PreferenceCategory>
    <PreferenceCategory android:title="About">
        <Preference
            android:key="about"
            android:title="About the app" />

        <Preference
            android:key="licenses"
            android:title="Open source Licenses" />
    </PreferenceCategory>

</PreferenceScreen>
